# pjsip-qt-tests

./: CMakeLists.txt  PjSipWorker.cpp  PjSipWorker.hpp  main.cpp
